Create basic insights page

--- a/config/locales/en/components.yml
+++ b/config/locales/en/components.yml
@@ -26,6 +26,7 @@ en:
 
     layouts:
       menu_items:
+        insights: "Insights"
         accounts: "Accounts"
         records: "Records"
         categories: "Categories"
