Add spending breakdown insight

--- a/config/locales/en/en.yml
+++ b/config/locales/en/en.yml
@@ -102,6 +102,8 @@ en:
 
   "No categories yet!": "No categories yet!"
 
+  "No expenses for the chosen period": "No expenses for the chosen period"
+
   "Password": "Password"
 
   "Previous": "Previous"
@@ -123,6 +125,8 @@ en:
   "Sign out": "Sign out"
 
   "Something’s not quite right": "Something’s not quite right"
+
+  "Spending breakdown": "Spending breakdown"
 
   "Template created": "Template created"
 
