--- a/config/locales/pt-BR/pt-BR.yml
+++ b/config/locales/pt-BR/pt-BR.yml
@@ -102,6 +102,8 @@ pt-BR:
 
   "No categories yet!": "Sem categorias ainda!"
 
+  "No expenses for the chosen period": "Sem despesas para o período escolhido"
+
   "Password": "Senha"
 
   "Previous": "Anterior"
@@ -123,6 +125,8 @@ pt-BR:
   "Sign out": "Sair"
 
   "Something’s not quite right": "Algum problema aconteceu"
+
+  "Spending breakdown": "Composição de gastos"
 
   "Template created": "Modelo criado"
 
