--- a/config/locales/pt-BR/pt-BR.yml
+++ b/config/locales/pt-BR/pt-BR.yml
@@ -40,6 +40,8 @@ pt-BR:
 
   "Choose a record type": "Escolha o tipo da transação"
 
+  "Choose the reminder type": "Escolha o tipo do lembrete"
+
   "Choose the type of record you want to create": >-
     Escolha o tipo da transação que deseja criar
 
@@ -47,6 +49,9 @@ pt-BR:
 
   "Create a new template": "Crie um novo modelo"
 
+  "Daily": "Diário"
+
+  "Define the frequency of your reminder": "Defina a frequência do seu lembrete"
   "Edit": "Atualizar"
 
   "Edit account": "Atualizar conta"
@@ -86,6 +91,8 @@ pt-BR:
 
   "Log into your account": "Entre na sua conta"
 
+  "Monthly": "Mensal"
+
   "Move money between accounts": "Transfira dinheiro entre suas contas"
 
   "New account": "Nova conta"
@@ -107,6 +114,8 @@ pt-BR:
   "No expenses for the chosen period": "Sem despesas para o período escolhido"
 
   "Nothing to remind you of — yet": "Nada para te lembrar - ainda"
+
+  "One time": "Única vez"
 
   "Password": "Senha"
 
@@ -164,6 +173,10 @@ pt-BR:
     Utilize modelos para simplificar a criação de transações repetitivas
 
   "View and manage your accounts": "Gerencie suas contas"
+
+  "Weekly": "Semanal"
+
+  "Yearly": "Anual"
 
   "You don't have any accounts yet!": "Você não tem nenhuma conta ainda"
 
