--- a/config/locales/pt-BR/pt-BR.yml
+++ b/config/locales/pt-BR/pt-BR.yml
@@ -119,6 +119,8 @@ pt-BR:
 
   "One time": "Única vez"
 
+  "OVERDUE": "VENCEU"
+
   "Password": "Senha"
 
   "Previous": "Anterior"
@@ -164,6 +166,8 @@ pt-BR:
     Modelos ajudam a criar transações com dados pré-definidos
 
   "This account doesn't have records yet": "Essa conta ainda não tem transações"
+
+  "TODAY": "HOJE"
 
   "Transfer": "Transferência"
 
