Add reminder description

--- a/config/locales/en/en.yml
+++ b/config/locales/en/en.yml
@@ -96,6 +96,8 @@ en:
 
   "Monthly": "Monthly"
 
+  "Monthly on the %{day}": "Monthly on the %{day}"
+
   "Move money between accounts": "Move money between accounts"
 
   "New account": "New account"
