--- a/config/locales/pt-BR/pt-BR.yml
+++ b/config/locales/pt-BR/pt-BR.yml
@@ -95,6 +95,8 @@ pt-BR:
 
   "Monthly": "Mensal"
 
+  "Monthly on the %{day}": "Mensalmente no dia %{day}"
+
   "Move money between accounts": "Transfira dinheiro entre suas contas"
 
   "New account": "Nova conta"
